grammar.js
    source_file: $ => repeat(choice(
      $._definition,
      $._declaration,
    )),

    _definition: $ => choice(
      $.program_definition,
      $.action_definition,
      $.function_definition,
      $.function_block_definition,
      $.method_definition,
      $.type_definition,
      $.struct_definition,
      $.union_definition,
      $.enum_definition,
      $.body_only_definition,
    ),

    _declaration: $ => choice(
      $.var_declaration,
      $.var_input_declaration,
      $.var_output_declaration,
      $.var_in_out_declaration,
      $.var_global_declaration,
      $.var_temp_declaration,
      $.var_stat_declaration,
      $.var_external_declaration,
      $.var_instance_declaration,
      $.var_access_declaration,
      $.var_config_declaration,
      $.var_generic_constant_declaration,
    ),

    program_definition: $ => seq(
      'PROGRAM',
      field('programName', $.identifier),
      repeat($._declaration),
      repeat($.statement),
      'END_PROGRAM'
    ),

    access: $ => choice(
      'PUBLIC',
      'PROTECTED',
      'PRIVATE',
      'INTERNAL',
    ),

    method_definition: $ => seq(
      'METHOD',
      optional($.access),
      field('methodName', $.identifier),
      optional(
        seq(':',
          $._data_type,)
      ),
      repeat($._declaration),
      repeat($.statement),
      'END_METHOD'
    ),

    function_block_definition: $ => seq(
      'FUNCTION_BLOCK',
      field('functionName', $.identifier),
      optional($.extend),
      optional($.implement),
      repeat($._declaration),
      repeat(choice($.method_definition, $.statement)),
      'END_FUNCTION_BLOCK'
    ),

    variable_attribute: $ => choice(
      'CONSTANT',
      'RETAIN',
      'PERSISTENT',
    ),

    var_declaration: $ => seq(
      'VAR',
      optional($.variable_attribute),
      repeat($.constant),
      'END_VAR'
    ),

    var_input_declaration: $ => seq(
      'VAR_INPUT',
      optional($.variable_attribute),
      repeat($.constant),
      'END_VAR'
    ),

    var_output_declaration: $ => seq(
      'VAR_OUTPUT',
      optional($.variable_attribute),
      repeat($.constant),
      'END_VAR'
    ),

    implement: $ => seq(
      'IMPLEMENTS',
      commaSep1($._identifier_path),
    ),

    /*
      Statements
    */

    assignment: $ => seq(
      $.variable,
      ':=',
      $._expression,
      ';'
    ),


    call_statement: $ => seq($.call_expression, ';'),

    index_range: $ => seq(
      field('lowerBound', choice(alias(token(signedInteger), $.integer), $.identifier)),
      '..',
      field('upperBound', choice(alias(token(signedInteger), $.integer), $.identifier))
    ),

    statement_initialization: $ => seq(
      $.variable,
      ':=',
      $._expression
    ),


    /*
      Declarations
    */

    constant: $ => seq(
      field('name', $.identifier),
      ':',
      $._data_type,
      optional($.variable_initialization),
      ';',
    ),

    /*
      Declaration components
    */
    variable_initialization: $ => seq(
      ':=',
      choice(
        commaSep1(choice($._expression, $.repetition_expression)),
        seq('(', commaSep1($.statement_initialization), ')'),
        seq('[', commaSep1(choice($._expression, $.repetition_expression)), ']'),
      ),
    ),

    /*
      Expressions
    */

    _expression: $ => choice(
      $._literal,
      $.variable,
      $.parenthesis_expression,
      $.unary_expression,
      $.binary_expression,
      $.mask_expression,
      $.call_expression
    ),

    parenthesis_expression: $ => seq('(', $._expression, ')'),

    unary_expression: $ => prec(6, choice(
      seq('NOT', $._expression),
      seq('+', $._expression),
      seq('-', $._expression)
    )),

    binary_expression: $ => choice(
      prec.left(5, seq($._expression, '**', $._expression)), // Not supported in Automation Studio
      prec.left(4, seq($._expression, '*', $._expression)),
      prec.left(4, seq($._expression, 'MUL', $._expression)),
      prec.left(4, seq($._expression, '/', $._expression)),
      prec.left(4, seq($._expression, 'DIV', $._expression)),
      prec.left(4, seq($._expression, 'MOD', $._expression)),
      prec.left(3, seq($._expression, '+', $._expression)),
      prec.left(3, seq($._expression, '-', $._expression)),
      prec.left(2, seq($._expression, '<', $._expression)),
      prec.left(2, seq($._expression, 'LT', $._expression)),
      prec.left(2, seq($._expression, '>', $._expression)),
      prec.left(2, seq($._expression, 'GT', $._expression)),
      prec.left(2, seq($._expression, '<=', $._expression)),
      prec.left(2, seq($._expression, 'LE', $._expression)),
      prec.left(2, seq($._expression, '>=', $._expression)),
      prec.left(2, seq($._expression, 'GE', $._expression)),
      prec.left(1, seq($._expression, '=', $._expression)),
      prec.left(1, seq($._expression, 'EQ', $._expression)),
      prec.left(1, seq($._expression, '<>', $._expression)),
      prec.left(1, seq($._expression, 'NE', $._expression)),
      prec.left(0, seq($._expression, 'AND', $._expression)),
      prec.left(0, seq($._expression, 'XOR', $._expression)),
      prec.left(0, seq($._expression, 'OR', $._expression))
    ),

    parameter_assignment: $ => seq(
      alias($.identifier, $.parameter),
      ':=',
      $._expression
    ),

    call_expression: $ => seq(
      field('functionName', choice($.builtin_function, $.builtin_variable, $.identifier)),
      optional($.index), // Only for function block instances
      '(',
      commaSep(field('input', choice($.parameter_assignment, $._expression))), // Function calls have ordered lists allowing expressions
      ')'
    ),

    variable: $ => seq(
      field('name', $.identifier),
      optional($.index),
      optional($.structure_member)
    ),

    index: $ => seq(
      '[',
      field('dim1', $._expression),
      optional(seq(',', field('dim2', $._expression))),
      ']'
    ),

    structure_member: $ => seq(token.immediate('.'), choice($.variable, $.call_expression)),

    /*
      Data types
    */
    _data_type: $ => choice(
      $.basic_data_type,
      alias($._identifier_path, $.derived_data_type),
      $.array_type,
      $.pointer_type,
      $.reference_type,
    ),

    _identifier_path: $ => seq($.identifier, repeat($.structure_member)),

    basic_data_type: $ => choice(
      'BOOL',
      /U?[SD]?INT/,
      /L?REAL/,
      'TIME',
      'DATE',
      'TIME_OF_DAY',
      'TOD',
      'DATE_AND_TIME',
      'DT',
      /W?STRING(\(\d+\))?/,
      'BYTE',
      /D?WORD/
    ),

    array_type: $ => seq(
      'ARRAY',
      '[',
      commaSep1($.index_range),
      ']',
      'OF',
      $._data_type,
    ),

    pointer_type: $ => seq(
      'POINTER',
      'TO',
      $._data_type,
    ),

    boolean: $ => token(choice('TRUE', 'FALSE')),

    integer: $ => {
      return token(unsignedInteger);
    },

    time: $ => token(seq(
      'T#',
      optional('-'),
      optional(/\d{1,2}[dD]/),
      optional(/\d{1,3}[hH]/),
      optional(/\d{1,5}[mM]/),
      optional(/\d{1,9}[sS]/),
      optional(/\d{1,9}((ms)|(MS))/)
    )),

    string: $ => seq(
      '\'',
      repeat($._string_content),
      '\''
    ),

    _string_content: $ => prec.right(repeat1(
      choice(
        alias(token.immediate(prec(1, /[^'"$\n]+/)), $.string_content),
        $.escape_sequence,
        // /[^'"$]{1}/,
      ))),

    escape_sequence: _ => token.immediate(prec(1, seq(
      '$',
      choice(
        /[a-fA-F\d]{2}/,
        /['"rnltpRNLTP$]/,
      ),
    ))),

    doc_comment: $ => token(repeat1(seq('///', /[^\n]*/, /[ \n]*/))),

    inline_comment: $ => token(seq('//', /.*/)),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    pragma: $ => token(seq(
      '{',
      /[^}]*/,
      '}',
    )),

    identifier: $ => /[a-zA-Z_]\w*/,

    builtin_function: $ => choice(
      "ABS",
      "ACOS",
      "ADD",
      "ADR",
      "ASIN",
      "ATAN",
      "BITADR",
      "COS",
      "EXP",
      "EXPT",
      "INDEXOF",
      "LOG",
      "LN",
      "MAX",
      "MIN",
      "MUX",
      "ROL",
      "ROR",
      "SEL",
      "SHL",
      "SHR",
      "SIN",
      "SIZEOF",
      "SUB",
      "SQRT",
      "TAN",
      "TRUNC",
      "__QUERYINTERFACE",
      "__QUERYPOINTER",
    ),
